<resources>
    <string name="app_name">App Contactos - JoseCima</string>
    <string name="buscar_contacto">Buscar Contacto</string>
    <string name="titulo_nuevo">Nuevo contacto</string>
    <string name="titulo_switch">Cambiar vista</string>
    <string name="titulo_search">Buscar contacto...</string>
    <string name="titulo_edad">Edad</string>
    <string name="titulo_peso">Peso</string>
    <string name="titulo_telefono">Teléfono</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_direccion">Dirección</string>

</resources>